--- a/instrument_inventory_app/templates/base.html
+++ b/instrument_inventory_app/templates/base.html
@@ -16,7 +16,7 @@
 <body>
     {% include 'navbar.html'%}
     <main>
-        <div class="container">
+        <div class="container-fluid" >
 
         {% block content %}
         {% endblock %}
@@ -24,10 +24,6 @@
     </main>
 </body>
 
-<br><br><br>
-<center>
-<footer>- Music is an expression of your existence -</footer>
-</center>
-<br><br><br>
+
 </html>
 
