--- a/instrument_inventory_app/templates/woodwind_metrics.html
+++ b/instrument_inventory_app/templates/woodwind_metrics.html
@@ -1,241 +1,176 @@
 {% extends 'base.html' %}
 
-{% block title %}Brass Metrics{% endblock %}
+{% block title %}Woodwind Metrics{% endblock %}
 
 {% block content %}
 <h1>
     Woodwind Metrics
 </h1>
 
+<div class="container-fluid " max-width=75%>
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr >
+            <th class="col-1">Locker Number</th>
+            <th class="col-1">Type</th>
+            <th class="col-1">Book</th>
+            <th class="col-1">Mouth Piece</th>
+            <th class="col-1">Cork Grease</th>
+            <th class="col-1">Cleaning Swab</th>
+            <th class="col-1">Reeds</th>
+            <th class="col-1">Ligature</th>
+            <th class="col-1">Condition</th>
+            <th class="col-1">Serial Number</th>
+            <th class="col-1">Assigned Student</th>
+            <th class="col-1">View/Edit</th>
+        </tr>
+    </thead>
 
-<div class='container-fluid'>
-    <div class='row'>
-        <div class='col-12'>
+    <br>
+    <div>
 
+        <tbody id="myTable"><h4>Search Missing Items</h4>
+            <div><input class="form-control" id="myInput" type="text" placeholder="Search.."></div>
 
-
-            <!-- ######  TRUMPETS   ###### -->
-
-
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th class="col-2">Total Trumpets</th>
-                    <th class="col-2">Book</th>
-                    <th class="col-2">Oil</th>
-                    <th class="col-2">Polishing Cloth</th>
-                    <th class="col-2">Mouth Pieces</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        {{trumpet_only}}
-                    </td>
-                    <td>
-                        {{trumpet_books_only}} of {{trumpet_only}}
-                    </td>
-                    <td>
-                        {{trumpet_oil_accessory_only}} of {{trumpet_only}}
-                    </td>
-                    <td>
-                        {{trumpet_polishing_cloth_accessory_only}} of {{trumpet_only}}
-                    </td>
-                    <td>
-                        {{trumpet_mouth_piece_accessory_only}} of {{trumpet_only}}
-                    </td>
-                </tr>
-
-            </tbody>
-            <!-- ######  Trombones   ###### -->
-            <div >
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th class="col-2">Trombones</th>
-                    <th class="col-2">Book</th>
-                    <th class="col-2">Oil</th>
-                    <th class="col-2">Polishing Cloth</th>
-                    <th class="col-2">Mouth Pieces</th>
-                </tr>
-            </thead>
-            <tbody >
-                <tr>
-                    <td>
-                        {{trombone_only}}
-                    </td>
-                    <td>
-                        {{trombone_books_only}} of {{trombone_only}}
-                    </td>
-                    <td>
-                        {{trombone_oil_accessory_only}} of {{trombone_only}}
-                    </td>
-                    <td>
-                        {{trombone_polishing_cloth_accessory_only}} of {{trombone_only}}
-                    </td>
-                    <td>
-                        {{trombone_mouth_piece_accessory_only}} of {{trombone_only}}
-                    </td>
-                </tr>
-            </tbody>
-
-
-
-            <!-- ######  TOTAL BRASS INSTRUMENTS   ###### -->
-            <div>
-                <div>
-                    <div >
-                      <table class="table">
-                        <thead>
-                          <tr>
-                            <th>All Brass Oil</th>
-                            <th>Polishing Cloth</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                {{total_oil}} of {{total_brass}}
-                            </td>
-                            <td>
-                                {{total_polishing_cloths}} of {{total_brass}}
-                            </td>
-                        </tr>
-
-                    </tbody>
-
-                </div>
-            </div>
-
-
-
-
-
-
-
-<!--
-
-            <div class='container-fluid' >
-                <div >
-                    <div  >
-                        <h5>Woodwind Parts</h5>
-                        <div>
-                            Total Reeds: {{reeds_only}} out of 50
-                        </div>
-                        <div>
-                            Total Ligatures: {{ligatures_only}} out of 50
-                        </div>
-                        <div>
-                            Total Woodwind Mouth Pieces: {{woodwind_mouth_piece_accessory_only}} out of 50
-                        </div>
-                        <br>
-
-                        <h5>Instrument Books</h5>
-
-                        <div>
-                            Total Clarinet Books: {{clarinet_books_only}} out of 50
-                        </div>
-                        <div>
-                            Total Alto Sax Books: {{alto_sax_books_only}} out of 50
-                        </div>
-                        <div>
-                            Total Bassoon Books: {{bassoon_books_only}} out of 50
-                        </div>
-
-                        <div>
-                            Total Flute Books: {{flute_books_only}} out of 50
-                        </div>
-                        <div>
-                            Total Oboe Books: {{oboe_books_only}} out of 50
-                        </div>
-                        <div>
-                            Total Bass Clarinet Books: {{bass_clarinet_books_only}} out of 50
-                        </div>
-                        <div>
-                            Total Tenor Sax Books: {{tenor_sax_books_only}} out of 50
-                        </div>
-
-                        <div>
-                            Total Bass Guitar Books: {{bass_guitar_books_only}} out of 50
-                        </div>
+            {% for instrument in instruments_with_missing_items %}
+            <tr>
+                <td>{{instrument.locker_assignment}}</td>
+                <td>{{instrument.instrument_kind}}</td>
+                <td>
+                    {% if instrument.book_accessory == False%}
+                    Missing Book
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                </div>
-            </div>
-            <br>
+                    {% else %}
+                    Item Present
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {%endif%}
 
+                </td>
+                <td>
+                    {% if instrument.mouth_piece_accessory == False%}
+                    Missing Mouth Piece
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {% else %}
+                    Item Present
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {%endif%}
 
+                </td>
+                <td >
+                    {% if instrument.cork_grease_accessory == False%}
+                    Missing Grease
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {% else %}
+                    Item Present
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {%endif%}
 
+                </td>
+                <td>
+                    {% if instrument.swab_accessory == False%}
+                    Missing Swab
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {% else %}
+                    Item Present
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {%endif%}
 
+                </td>
+                 <td>
+                    {% if instrument.reeds_accessory == False%}
+                    Missing Reeds
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {% else %}
+                    Item Present
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {%endif%}
 
+                </td>
+                 <td>
+                    {% if instrument.ligature_accessory == False%}
+                    Missing Ligature
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {% else %}
+                    Item Present
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    {%endif%}
 
+                </td>
+                <td>
+          {{instrument.condition}}
+          {% if instrument.condition == "broken"%}
+          <div class="progress">
+            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          {% elif instrument.condition == "needs repair soon"%}
+          <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          {% elif instrument.condition == "decent condition"%}
+          <div class="progress">
+            <div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          {% elif instrument.condition == "excellent condition"%}
+          <div class="progress">
+            <div class="progress-bar bg-success progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          {%else%}
+          <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          {%endif%}
 
-            <div>
-                Total Baritone Horns: {{baritone_horn_only}} out of 50
-            </div>
-            <div>
-                Total French Horns: {{french_horn_only}} out of 50
-            </div>
-            <div>
-                Total Trombones: {{trombone_only}} out of 50
-            </div>
-            <div>
-                Total Trumpets: {{trumpet_only}} out of 50
-            </div>
-            <div>
+        </td>
+                <td>{{instrument.serial_number}}</td>
+                <td>{{instrument.student}}</td>
+                <td> <a class="btn btn-outline-primary btn-sm" href="{% url 'inventory:update_instrument' instrument.id %}">Edit/Update</a></td>
 
-            </div>
-            <div>
-                Total Trombone Mouth Pieces: {{trombone_mouth_piece_accessory_only}} out of 50
-            </div>
-            <div>
-                Total French Horn Mouth Pieces: {{french_horn_mouth_piece_accessory_only}} out of 50
-            </div>
-            <div>
-                Total Baritone Horn Mouth Pieces: {{baritone_horn_mouth_piece_accessory_only}} out of 50
-            </div>
-
-            <div>
-                Total Baritone Horn Oil: {{baritone_horn_oil_accessory_only}} out of 50
-            </div>
-            <div>
-                Total French Horn Oil: {{french_horn_oil_accessory_only}} out of 50
-            </div>
-            <div>
-
-            </div>
-            <div>
-                Total Trombone Oil: {{trombone_oil_accessory_only}} out of 50
-            </div>
-            <div>
-                Total French Horn Books: {{french_horn_sax_books_only}} out of 50
-            </div>
-
-            <div>
-                Total Trombone Books: {{trombone_books_only}} out of 50
-            </div>
-            <div>
-                Total Baritone Horn Books: {{baritone_horn_books_only}} out of 50
-            </div>
-            <div>
-
-            </div>
-
-
-            <div>
-
-            </div>
-            <div>
-                Total Trombone Polishing Cloth: {{trombone_polishing_cloth_accessory_only}} out of 50
-            </div>
-            <div>
-                Total French Horn Polishing Cloth: {{french_horn_polishing_cloth_accessory_only}} out of 50
-            </div>
-            <div>
-                Total Baritone Horn Polishing Cloth: {{baritone_horn_polishing_cloth_accessory_only}} out of 50
-            </div>
-
+            </tr>
         </div>
     </div>
-</div> -->
+</div>
+
+{%endfor%}
+
+
+<script>
+  $(document).ready(function(){
+    $("#myInput").on("keyup", function() {
+      var value = $(this).val().toLowerCase();
+      $("#myTable tr").filter(function() {
+        $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
+</tbody>
+</div>
 
 {% endblock %}
+
+
